--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "coc-eslint": ">=1.3.2",
+    "coc-go": ">=0.13.2",
     "coc-json": ">=1.3.2",
     "coc-prettier": ">=1.1.18",
     "coc-tsserver": ">=1.6.0"
