ssh/config: add new entries

--- a/.ssh/config
+++ b/.ssh/config
@@ -8,6 +8,11 @@ Host lugh
 	HostName lugh.ss.cx
 	ForwardAgent no
 
+Host thor
+	User ajm
+	HostName 192.168.1.44
+	ForwardAgent yes
+
 Host whatbox
 	User ajm
 	HostName venus.whatbox.ca
@@ -23,6 +28,10 @@ Host jon
 	User monks
 	HostName kate.money
 	ForwardAgent yes
+
+Host backup
+	User root
+	HostName 57269.zfs.rsync.net
 
 Host devbox
 	ProxyJump sambox
