ssh config: cleanup devbox section

--- a/.ssh/config
+++ b/.ssh/config
@@ -34,24 +34,15 @@ Host backup
 	HostName 57269.zfs.rsync.net
 
 Host devbox
-	ProxyJump sambox
-	
-	User ubuntu
 	# DEVBOX_HOST
-	Hostname 54.183.82.130
-	# ForwardAgent so that local SSH keys can be used on the instance.
+	Hostname 13.52.80.163
+	ProxyJump sambox
+	CheckHostIP no
+	User ubuntu
 	ForwardAgent yes
-	# this prevents autossh from getting stuck on a failed forward session
 	ExitOnForwardFailure yes
 	ServerAliveInterval 30
 	ServerAliveCountMax 5
-	# StrictHostKeyChecking disabled because the public IP address of the devbox will
-	# change continuously.
 	StrictHostKeyChecking no
-	# StreamLocalBindUnlink cleans up the unix socket used for the okta agent when
-	# terminating the connection.
 	StreamLocalBindUnlink yes
-	AddKeysToAgent yes
-	UseKeychain yes
-	IdentityFile ~/.ssh/id_rsa
 
