ssh/config: ...actually don't use dns for thor
The freedbsd tailscale port doesn't seem to set up routes correctly, and I've
reached my limit on debugging it. Hopefully a smarter person will figure this
out in the future.

--- a/.ssh/config
+++ b/.ssh/config
@@ -10,7 +10,8 @@ Host lugh
 
 Host thor
 	User ajm
-	HostName thor.ss.cx
+	HostName 192.168.1.44
+	ProxyJump lugh
 	ForwardAgent yes
 
 Host whatbox
