.ssh: connect to thor via vpn

--- a/.ssh/config
+++ b/.ssh/config
@@ -8,7 +8,12 @@ Host lugh
 
 Host thor
 	User ajm
-	HostName 192.168.1.44
+	HostName thor.ss.cx
+	ProxyJump lugh
+
+Host thor-syncer
+	User syncer
+	HostName thor.ss.cx
 	ProxyJump lugh
 
 Host whatbox
