--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "coc-deno": ">=3.2.0",
     "coc-eslint": ">=1.4.5",
     "coc-go": ">=0.13.3",
     "coc-json": ">=1.3.4",
     "coc-prettier": ">=1.1.23",
+    "coc-tailwindcss": ">=0.7.0",
     "coc-tsserver": ">=1.6.8"
   }
 }
