ssh: update whatbox host

--- a/.ssh/config
+++ b/.ssh/config
@@ -16,7 +16,7 @@ Host thor-syncer
 
 Host whatbox
 	User ajm
-	HostName venus.whatbox.ca
+	HostName rhea.whatbox.ca
 	ForwardAgent yes
 
 Host sambox
