ssh: move devbox host into Include file
this way, set-devbox-ip won't create diffs in the tracked .ssh/config file

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,5 @@
+Include ~/.ssh/devbox.config
+
 Host *
 	AddKeysToAgent yes
 	IdentityFile ~/.ssh/id_ed25519
@@ -34,8 +36,6 @@ Host backup
 	HostName 57269.zfs.rsync.net
 
 Host devbox
-	# DEVBOX_HOST
-	Hostname 13.52.80.163
 	ProxyJump sambox
 	CheckHostIP no
 	User ubuntu
