--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -5,6 +5,7 @@
     "coc-go": ">=0.13.3",
     "coc-json": ">=1.3.6",
     "coc-prettier": ">=1.1.24",
+    "coc-sourcekit": ">=0.0.3",
     "coc-tailwindcss": ">=0.7.0",
     "coc-tsserver": ">=1.8.6"
   }
