--- a/locals.fish.example
+++ b/locals.fish.example
@@ -1,5 +1,11 @@
-set -u machine_sigil X
-set -u machine_name MACHINE
-set -u machine_user (whoami)
-set -u use_tmux true
+set --export machine_name MACHINE
+set --export machine_sigil X
+set --export machine_user (whoami)
+set --export setup_development_tools false
+set --export setup_fancy_cli_tools true
+set --export setup_ledger false
+set --export setup_node_environment false
+set --export setup_rust_environment false
+set --export setup_swift_environment false
+set --export use_tmux true
 
