fish: add more safety around locals

--- a/locals.fish.example
+++ b/locals.fish.example
@@ -1,11 +1,13 @@
-set --export machine_name MACHINE
-set --export machine_sigil X
-set --export machine_user (whoami)
-set --export setup_development_tools false
-set --export setup_fancy_cli_tools true
-set --export setup_ledger false
-set --export setup_node_environment false
-set --export setup_rust_environment false
-set --export setup_swift_environment false
-set --export use_tmux true
+set --universal machine_name MACHINE
+set --universal machine_sigil X
+set --universal machine_user (whoami)
+set --universal setup_development_tools false
+set --universal setup_fancy_cli_tools true
+set --universal setup_ledger false
+set --universal setup_neovim true
+set --universal setup_network_tools false
+set --universal setup_node_environment false
+set --universal setup_rust_environment false
+set --universal setup_swift_environment false
+set --universal use_tmux true
 
