fish: only install macos apps if setup_desktop_apps set

--- a/locals.fish.example
+++ b/locals.fish.example
@@ -1,3 +1,4 @@
+set --universal install_desktop_apps false
 set --universal machine_name MACHINE
 set --universal machine_sigil X
 set --universal machine_user (whoami)
