ssh: add rsync.net host

--- a/.ssh/config
+++ b/.ssh/config
@@ -4,6 +4,10 @@ Host *
 	AddKeysToAgent yes
 	IdentityFile ~/.ssh/id_ed25519
 
+Host rsync
+	User root
+	HostName 57269.zfs.rsync.net
+
 Host lugh
 	User ajm
 	HostName lugh.ss.cx
