tmux: stupider config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,10 +8,11 @@ set -g mouse on
 # infinite scrollback
 set-option -g history-limit 300000
 
+# pretty colors
+set -g default-terminal "xterm-256color"
+
 # make vim happier
 set-option -sg escape-time 10
-set-option -g default-terminal "screen-256color"
-set-option -sa terminal-overrides ',xterm-256color:Tc'
 
 # no status bar
 set -g status off
