--- a/locals.fish.example
+++ b/locals.fish.example
@@ -19,4 +19,5 @@ set --universal setup_rust_environment false
 set --universal setup_ssh_primary true
 set --universal setup_swift_environment false
 set --universal use_tmux true
+set --universal debug_fish_init false
 
