ssh: rename devbox to proxied-devbox
by making this more explicit, we avoid clobbering the samsara "devbox" ssh config entry

--- a/.ssh/config
+++ b/.ssh/config
@@ -38,7 +38,7 @@ Host backup
 	User root
 	HostName 57269.zfs.rsync.net
 
-Host devbox
+Host proxied-devbox
 	ProxyJump sambox
 	CheckHostIP no
 	User ubuntu
