git: add clone-my alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -39,6 +39,8 @@
   master = "!f() { git status --porcelain && git fetch && git checkout master && git reset --hard $(git safe-rebase-target) ; }; f"
   devbox = "!f() { git fetch && git checkout $(ssh devbox 'cd ~/co/backend && git rev-parse --short HEAD'); }; f"
 
+  clone-my = "!f() { repo=\"$1\" ; git clone git@github.com:amonks/$repo.git; }; f"
+
   # check out a new branch from safe master
   new-branch = "!f() { git fetch && git checkout -b $1 && git reset --hard $(git safe-rebase-target); }; f"
 
