ssh: change sambox username for new m1

--- a/.ssh/config
+++ b/.ssh/config
@@ -26,8 +26,8 @@ Host whatbox
 	ForwardAgent yes
 
 Host sambox
-	User ajm
-	HostName 192.168.0.174
+	User andrewmonks
+	HostName 192.168.0.190
 
 Host jon
 	User monks
