ssh: add nencatacoa

--- a/.ssh/config
+++ b/.ssh/config
@@ -34,6 +34,10 @@ Host jon
 	HostName kate.money
 	ForwardAgent yes
 
+Host nencatacoa
+	User ajm
+	HostName 192.168.0.141
+
 Host backup
 	User root
 	HostName 57269.zfs.rsync.net
