--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -7,6 +7,8 @@
     "coc-prettier": ">=9.3.1",
     "coc-sourcekit": ">=0.0.3",
     "coc-tailwindcss": ">=0.7.0",
-    "coc-tsserver": ">=1.11.3"
-  }
+    "coc-tsserver": ">=1.11.11"
+  },
+  "disabled": [],
+  "locked": []
 }
