--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -1,14 +1,15 @@
 {
   "dependencies": {
-    "coc-deno": ">=3.9.5",
+    "coc-deno": ">=3.10.4",
     "coc-eslint": ">=1.5.8",
     "coc-go": ">=1.3.0",
     "coc-json": ">=1.6.1",
     "coc-prettier": ">=9.3.1",
     "coc-sourcekit": ">=0.0.3",
     "coc-tailwindcss": ">=0.7.0",
-    "coc-tsserver": ">=1.11.11"
+    "coc-tsserver": ">=1.11.12"
   },
   "disabled": [],
-  "locked": []
+  "locked": [],
+  "lastUpdate": 1668678553808
 }
