tmux: enable focus-events

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,7 @@ set -g default-terminal "xterm-256color"
 
 # make vim happier
 set-option -sg escape-time 10
+set-option -g focus-events on
 
 # no status bar
 set -g status off
