--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,8 @@ set -g mouse on
 set-option -g history-limit 300000
 
 # pretty colors
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
+set-option -sa terminal-features ',xterm-256color:RGB'
 
 # make vim happier
 set-option -sg escape-time 10
