--- a/.gitconfig
+++ b/.gitconfig
@@ -18,7 +18,7 @@
   autocorrect = 1
 
 [core]
-  editor = vim
+  editor = nvim
   excludesfile = ~/.global_gitignore
   # pager = delta --theme=zenburn
 
