gitconfig: support both 'master' and 'main' branches

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,5 @@
+[branch "main"]
+	rebase = true
 [branch "master"]
 	rebase = true
 
@@ -23,26 +25,30 @@
 	# pager = delta --theme=zenburn
 
 [alias]
-	r = "!f() { git fetch && target=$(git safe-rebase-target) && git rebase $target --exec \"git commit --amend \\\"--date=$(date)\\\" --no-edit\" ; }; f"
-	ri = "!f() { git fetch && target=$(git safe-rebase-target) && git rebase -i $target && git rebase $target --exec \"git commit --amend \\\"--date=$(date)\\\" --no-edit\" ; }; f"
-	i = "!f() { git fetch && target=$(git safe-rebase-target) && git rebase -i $target ; }; f"
+	r = "!f() { git fetch && git rebase $(git main-remote) --exec \"git commit --amend \\\"--date=$(date)\\\" --no-edit\" ; }; f"
+	ri = "!f() { git fetch && git rebase -i $(git main-remote) && git rebase $(git main-remote) --exec \"git commit --amend \\\"--date=$(date)\\\" --no-edit\" ; }; f"
+	i = "!f() { git fetch && git rebase -i $(git main-remote) ; }; f"
 	p = "!f() { branch=$(git rev-parse --abbrev-ref HEAD) ; while ! git push --force-with-lease --set-upstream -- origin $branch ; do echo retrying push ; done ; }; f"
 	rp = "!f() { git r && git p ; }; f"
 	rip = "!f() { git ri && git p ; }; f"
 
-	each = "!f() { git fetch && target=$(git safe-rebase-target) && git rebase $target --exec \"$@; git add . && git commit --amend --no-edit\" ; }; f"
-	troy-each = "!f() { git fetch && target=$(git safe-rebase-target) && git rebase $target --exec \"cd $BACKEND_ROOT/mobile/Troy; $@; cd $BACKEND_ROOT; git add . && git commit --amend --no-edit\" ; }; f"
+	each = "!f() { git fetch && git rebase $(git main-remote) --exec \"$@; git add . && git commit --amend --no-edit\" ; }; f"
+	troy-each = "!f() { git fetch && git rebase $(git main-remote) --exec \"cd $BACKEND_ROOT/mobile/Troy; $@; cd $BACKEND_ROOT; git add . && git commit --amend --no-edit\" ; }; f"
 
-	ri-test = "!f() { git fetch && target=$(git safe-rebase-target) && git rebase $target -i --exec \"regen && git add . && git commit --amend --no-edit\" && git r ; }; f"
+	ri-test = "!f() { git fetch && git rebase $(git main-remote) -i --exec \"regen && git add . && git commit --amend --no-edit\" && git r ; }; f"
 
-	safe-rebase-target = "!f() { safe-rebase-target; }; f"
-	master = "!f() { git status --porcelain && git fetch && git checkout master && git reset --hard $(git safe-rebase-target) ; }; f"
+	main-branch = "!f() { git branch -l master main | tr -d '*' | awk '{ print $1 }' | head -n1 ; }; f"
+	main-remote = "!f() { echo "origin/$(git main-branch)" ; }; f"
+
+	main = "!f() { git status --porcelain && git fetch && git checkout $(git main-branch) && git reset --hard $(git main-remote) ; }; f"
+	master = "!f() { git main }; f"
+
 	devbox = "!f() { git fetch && git checkout $(ssh devbox 'cd ~/co/backend && git rev-parse --short HEAD'); }; f"
 
-	clone-my = "!f() { repo=\"$1\" ; git clone git@github.com:amonks/$repo.git; }; f"
+	gclone = "!f() { repo=\"$1\" ; git clone git@github.com:$repo.git; }; f"
 
-	# check out a new branch from safe master
-	new-branch = "!f() { git fetch && git checkout -b $1 && git reset --hard $(git safe-rebase-target); }; f"
+	# check out a new branch from safe main
+	new-branch = "!f() { git fetch && git checkout -b $1 && git reset --hard $(git main-remote); }; f"
 
 	# diff branch by message
 	miff = "!f() { commit-message-diff $1 $2 | column -t -s'\t' ; }; f"
