--- a/.config/beets/config.yaml
+++ b/.config/beets/config.yaml
@@ -1,7 +1,7 @@
 directory: /mypool/tank/music/flac
 # library: /mypool/tank/music/library.db
 library: /usr/home/ajm/beets.db
-plugins: embedart fetchart ftintitle zero mbsync convert
+plugins: embedart fetchart ftintitle zero mbsync convert mbsubmit
 
 musicbrainz:
   extra_tags: [country, label]
