--- a/.config/beets/config.yaml
+++ b/.config/beets/config.yaml
@@ -18,7 +18,13 @@ zero:
   update_database: true
 
 convert:
-  command: /usr/home/ajm/scripts/convert-to-mp3.sh $source $dest
-  extension: mp3
   dest: /mypool/tank/music/mp3/
+  format: v0
+  formats:
+    v0:
+      command: /usr/home/ajm/scripts/convert-to-mp3.sh v0 "$source" "$dest"
+      extension: mp3
+    cbr320:
+      command: /usr/home/ajm/scripts/convert-to-mp3.sh 320 "$source" "$dest"
+      extension: mp3
 
