--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,7 +21,7 @@ set -g status off
 
 # use vim-like keys for splits and windows
 # also, open new splits and windows in the current directory, not the one tmux was launched from
-# use ctr-b {h,v} to split horizontally and vertically, not ctrl-b {",%}
+# use ctr-b {s,v} to split horizontally and vertically, not ctrl-b {",%}
 
 unbind-key %
 unbind-key '"'
