ssh: cleanup config; swap whatbox host

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,5 +1,3 @@
-Include ~/.ssh/devbox.config
-
 Host *
 	AddKeysToAgent yes
 	IdentityFile ~/.ssh/id_ed25519
@@ -12,22 +10,18 @@ Host lugh
 	User ajm
 	HostName lugh.ss.cx
 
+Host brigid
+	User ajm
+	HostName brigid.ss.cx
+
 Host thor
 	User ajm
 	HostName thor.ss.cx
 
-Host thor-syncer
-	User syncer
-	HostName thor.ss.cx
-
 Host whatbox
 	User ajm
-	HostName rhea.whatbox.ca
+	HostName lemon.whatbox.ca
 	ForwardAgent yes
-
-Host sambox
-	User andrewmonks
-	HostName 192.168.0.190
 
 Host jon
 	User monks
@@ -41,15 +35,4 @@ Host nencatacoa
 Host backup
 	User root
 	HostName 57269.zfs.rsync.net
-
-Host proxied-devbox
-	ProxyJump sambox
-	CheckHostIP no
-	User ubuntu
-	ForwardAgent yes
-	ExitOnForwardFailure yes
-	ServerAliveInterval 30
-	ServerAliveCountMax 5
-	StrictHostKeyChecking no
-	StreamLocalBindUnlink yes
 
