--- a/.ssh/config
+++ b/.ssh/config
@@ -18,6 +18,10 @@ Host thor
 	User ajm
 	HostName thor.ss.cx
 
+Host thor-syncer
+	User syncer
+	HostName thor.ss.cx
+
 Host whatbox
 	User ajm
 	HostName lemon.whatbox.ca
