tmux: use vim bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,8 @@ set -g status-fg white
 
 set -g mouse on
 
+# vim bindings
+set-option -g mode-keys vi
 
 # infinite scrollback
 set-option -g history-limit 300000
