.ssh/config: cleanup

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,29 +2,12 @@ Host *
 	AddKeysToAgent yes
 	IdentityFile ~/.ssh/id_ed25519
 
-Host rsync
-	User root
-	HostName 57269.zfs.rsync.net
 
-Host lugh
-	User ajm
-	HostName lugh.ss.cx
-
-Host brigid
-	User ajm
-	HostName brigid.ss.cx
-
-Host thor
-	User ajm
-	HostName thor.ss.cx
-
-Host thor-syncer
-	User syncer
-	HostName thor.ss.cx
+## Third party hosts
 
 Host whatbox
 	User ajm
-	HostName lemon.whatbox.ca
+	HostName w.ss.cx
 	ForwardAgent yes
 
 Host jon
@@ -32,11 +15,29 @@ Host jon
 	HostName kate.money
 	ForwardAgent yes
 
-Host nencatacoa
-	User ajm
-	HostName 192.168.0.141
-
+Host rsync
+	User root
+	HostName 57269.zfs.rsync.net
 Host backup
 	User root
 	HostName 57269.zfs.rsync.net
+
+
+## Tailnet
+
+Host brigid
+	User ajm
+	HostName brigid.ss.cx
+Host lugh
+	User ajm
+	HostName lugh.ss.cx
+Host qaynan
+	User ajm
+	HostName qaynan.ss.cx
+Host thor
+	User ajm
+	HostName thor.ss.cx
+Host thor-syncer
+	User syncer
+	HostName thor.ss.cx
 
