.ssh: add shemihazah

--- a/.ssh/config
+++ b/.ssh/config
@@ -25,6 +25,9 @@ Host backup
 
 ## Tailnet
 
+Host shemihazah
+	User ajm
+	HostName shemihazah.ss.cx
 Host brigid
 	User ajm
 	HostName brigid.ss.cx
