--- a/freebsd-root/etc/rc.conf
+++ b/freebsd-root/etc/rc.conf
@@ -21,11 +21,6 @@ transmission_enable="YES"
 transmission_watch_dir="/mypool/tank/seeds/torrents"
 transmission_download_dir="/mypool/tank/seeds/data"
 
-rpcbind_enable="YES"
-nfs_server_enable="YES"
-mountd_enable="YES"
-mountd_flags="-r -p 624" # Force mountd to bind to the specified port
-rpc_lockd_enable="YES"
-rpc_statd_enable="YES"
-nfsv4_server_enable="YES"
-nfsuserd_enable="YES"
+samba_server_enable="YES"
+avahi_daemon_enable="YES"
+avahi_dnsconfd_enable="YES"
