add backupd rc.d script

--- a/freebsd-root/etc/rc.conf
+++ b/freebsd-root/etc/rc.conf
@@ -24,3 +24,5 @@ transmission_download_dir="/mypool/tank/seeds/data"
 samba_server_enable="YES"
 avahi_daemon_enable="YES"
 avahi_dnsconfd_enable="YES"
+
+backupd_enable="YES"
