--- a/freebsd-root/usr/local/etc/smb4.conf
+++ b/freebsd-root/usr/local/etc/smb4.conf
@@ -41,3 +41,16 @@
 	directory mask     = 0755
 	vfs objects        = catia fruit streams_xattr zfsacl
         fruit:time machine = yes
+
+[mp3]
+	path               = /data/tank/music/mp3
+	valid users        = ajm
+	public             = no
+	writable           = yes
+	browsable          = yes
+	read only          = no
+	guest ok           = no
+	create mask        = 0600
+	directory mask     = 0755
+	vfs objects        = catia fruit streams_xattr zfsacl
+
