set up cursor ssh

--- a/.ssh/config
+++ b/.ssh/config
@@ -40,6 +40,10 @@ Host qaynan
 Host thor
 	User ajm
 	HostName thor.ss.cx
+Host thor-linux
+	User ajm
+	HostName thor.ss.cx
+	RemoteCommand /compat/linux/usr/bin/bash
 Host thor-syncer
 	User syncer
 	HostName thor.ss.cx
