--- a/freebsd-root/usr/local/etc/smb4.conf
+++ b/freebsd-root/usr/local/etc/smb4.conf
@@ -54,3 +54,15 @@
 	directory mask     = 0755
 	vfs objects        = catia fruit streams_xattr zfsacl
 
+[funk]
+	path               = /data/tank/funk
+	valid users        = ajm
+	public             = no
+	writable           = yes
+	browsable          = yes
+	read only          = no
+	guest ok           = no
+	create mask        = 0600
+	directory mask     = 0755
+	vfs objects        = catia fruit streams_xattr zfsacl
+
