fix transmission paths

--- a/freebsd-root/etc/rc.conf
+++ b/freebsd-root/etc/rc.conf
@@ -18,8 +18,8 @@ ipmi_load="YES"
 tailscaled_enable="YES"
 
 transmission_enable="YES"
-transmission_watch_dir="/mypool/tank/seeds/torrents"
-transmission_download_dir="/mypool/tank/seeds/data"
+transmission_watch_dir="/data/tank/seeds/torrents"
+transmission_download_dir="/data/tank/seeds/data"
 
 samba_server_enable="YES"
 avahi_daemon_enable="YES"
