--- a/freebsd-root/usr/local/etc/transmission/home/settings.json
+++ b/freebsd-root/usr/local/etc/transmission/home/settings.json
@@ -12,12 +12,12 @@
     "anti-brute-force-threshold": 100,
     "bind-address-ipv4": "0.0.0.0",
     "bind-address-ipv6": "::",
-    "blocklist-enabled": false,
-    "blocklist-url": "http://www.example.com/blocklist",
+    "blocklist-enabled": true,
+    "blocklist-url": "https://raw.githubusercontent.com/Naunter/BT_BlockLists/master/bt_blocklists.gz",
     "cache-size-mb": 4,
     "default-trackers": "",
     "dht-enabled": true,
-    "download-dir": "/mypool/tank/seeds/data",
+    "download-dir": "/data/tank/seeds/data",
     "download-queue-enabled": true,
     "download-queue-size": 5,
     "encryption": 1,
@@ -47,7 +47,7 @@
     "ratio-limit-enabled": false,
     "rename-partial-files": true,
     "rpc-authentication-required": false,
-    "rpc-bind-address": "100.83.137.16",
+    "rpc-bind-address": "0.0.0.0",
     "rpc-enabled": true,
     "rpc-host-whitelist": "",
     "rpc-host-whitelist-enabled": false,
@@ -78,6 +78,6 @@
     "umask": "022",
     "upload-slots-per-torrent": 14,
     "utp-enabled": true,
-    "watch-dir": "/mypool/tank/seeds/torrents",
+    "watch-dir": "/data/tank/seeds/torrents",
     "watch-dir-enabled": true
 }
