freebsd samba: disable mangled-names
this ought to fix a bug where while a file is being written, macos
clients get a randomly generated name and then cache it forever

--- a/freebsd-root/usr/local/etc/smb4.conf
+++ b/freebsd-root/usr/local/etc/smb4.conf
@@ -5,6 +5,7 @@
 	security             = user
 	wins support         = yes
 	passdb backend       = tdbsam
+	mangled names        = no
 
 	fruit:aapl                                = yes
 	fruit:model                               = MacSamba
