--- a/.ssh/config
+++ b/.ssh/config
@@ -46,5 +46,5 @@ Host thor-linux
 	RemoteCommand /compat/linux/usr/bin/bash
 Host thor-syncer
 	User syncer
-	HostName thor.ss.cx
+	HostName 192.168.1.44
 
