ssh: new rsync host

--- a/.ssh/config
+++ b/.ssh/config
@@ -17,10 +17,10 @@ Host jon
 
 Host rsync
 	User root
-	HostName 57269.zfs.rsync.net
+	HostName de1424b.rsync.net
 Host backup
 	User root
-	HostName 57269.zfs.rsync.net
+	HostName de1424b.rsync.net
 
 
 ## Tailnet
