tmux shift-enter

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,9 +10,9 @@ set-option -g mode-keys vi
 # infinite scrollback
 set-option -g history-limit 300000
 
-# pretty colors
-set -g default-terminal "xterm-256color"
-set-option -sa terminal-features ',xterm-256color:RGB'
+# support shift-enter
+# set -s extended-keys on
+# bind -n S-Enter send-keys "^[[13;2u"
 
 # make vim happier
 set-option -sg escape-time 10
