--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,10 @@
 set -g status-bg black
 set -g status-fg white
 
+# hyperlinks
+set -g default-terminal "xterm-ghostty"
+set -ga terminal-features ",*:hyperlinks"
+
 set -g mouse on
 
 # vim bindings
