rm go sources, install from own repo with go tool instead

--- a/locals.fish.example
+++ b/locals.fish.example
@@ -5,11 +5,11 @@ set --universal machine_user (whoami)
 set --universal setup_clojure_environment false
 set --universal setup_development_tools false
 set --universal setup_fancy_cli_tools true
-set --universal setup_golang_environment false
 set --universal setup_ledger false
 set --universal setup_lisp_environment false
 set --universal setup_markdown_environment false
 set --universal setup_neovim true
+set --universal setup_nas_tools false
 set --universal setup_network_tools false
 set --universal setup_node_environment false
 set --universal setup_python_environment false
