--- a/.config/jj/config.toml
+++ b/.config/jj/config.toml
@@ -30,23 +30,27 @@
 [templates]
   git_push_bookmark = '"amonks/push_" ++ change_id.short()'
   draft_commit_description = '''
-    concat(
-      coalesce(
-	concat(description.first_line(), "\n"),
-	"\n"
-      ),
-      "\n",
-      coalesce(
-        commit_description_body,
-        default_commit_description_body,
-      ),
-      surround(
-        "\nJJ: This commit contains the following changes:\n",
-	"",
-        indent("JJ:     ", diff.stat(72)),
-      ),
-      "\nJJ: ignore-rest\n",
-      diff.git(),
+    if(
+      self.description().trim() == "WIP" || self.contained_in("private()"),
+      description.first_line(),
+      concat(
+        coalesce(
+          concat(description.first_line(), "\n"),
+          "\n"
+        ),
+        "\n",
+        coalesce(
+          commit_description_body,
+          default_commit_description_body,
+        ),
+        surround(
+          "\nJJ: This commit contains the following changes:\n",
+          "",
+          indent("JJ:     ", diff.stat(72)),
+        ),
+        "\nJJ: ignore-rest\n",
+        diff.git(),
+      )
     )
   '''
 
@@ -65,7 +69,7 @@
 # revsets used by jj internal commands
 [revsets]
   # By default, show all my current stacks of work.
-  log = '(trunk()::(megamerge()|@) ~ private()) | pr_branches()::(megamerge()|@) | megamerge()-::'
+  log = 'without_private()'
 
   # Prioritize megamerges so that they always appear on the 'left-most' side of
   # the graph.
@@ -73,6 +77,9 @@
 
 # revset functions to be used anywhere
 [revset-aliases]
+  'without_private()' = '( stack( pr_branches()|@ ) ~ private() ) | trunk() | @ | megamerge- | megamerge'
+  'all_mine()' = 'stack(mine() | @) | trunk() | @'
+
   'user(x)' = 'author(x) | committer(x)'
   'mine()' = 'user("a@monks.co")'
 
