jj: add privatize

--- a/.config/jj/config.toml
+++ b/.config/jj/config.toml
@@ -19,6 +19,7 @@
   push = ["git", "push", "--allow-new", "-r", "pr_branches()"]
   pr = ["util", "exec", "--", "jjpr"]
   catchup = ["util", "exec", "--", "bash", "-c", "jj git fetch && jj rebase --skip-emptied -d main && jj simplify-parents"]
+  privatize = ["util", "exec", "--", "jj-privatize"]
 
 [git]
   private-commits = "private()"
